[workspace]
members = ["crates/*"]

[package]
name = "qoif-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
std = ["alloc", "qoif-types/std"]
alloc = ["qoif-types/alloc"]

[dependencies]
qoif-types = {path = "./crates/qoif-types"}

[dev-dependencies]
png = "*"
