[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Skgland/arqoii"

[workspace.dependencies]
arqoii = { version = "0.2.0", path = "./crates/arqoii"}
arqoii-types = { version = "0.2.0", path = "./crates/arqoii-types"}
clap = { version = "4.5.1", features = ["derive"] }
eframe = "0.26.2"
png = "0.17.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
