[package]
name = "arqoii-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI for viewing qoi files and converting qoi to/from png"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arqoii = { workspace = true }
clap = { workspace = true }
eframe = { workspace = true }
png = { workspace = true }
