[package]
name = "arqoii"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "A library for encoding images into to qoi image format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arqoii-types = { workspace = true }

[dev-dependencies]
png = { workspace = true }
